z-index fixes

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -14,6 +14,8 @@ $lc: $w * 0.1;
 // $sc: $w * 0.0322675;
 $sc: $w * 0.01;
 
+$max-z: 999;
+
 $default-pencil: dimgray;
 
 $main-line: #d6d3cc;
@@ -139,6 +141,7 @@ $horiz-pad: 10px;
     display: none;
   }
   position: absolute;
+  z-index: $max-z;
   left: calc(50% - 1px);
   top: 0;
   bottom: 0;
@@ -320,6 +323,7 @@ $offset: 7px;
   padding: 0 $line * 2 * 2/3;
 
   position: absolute;
+  z-index: $max-z;
   bottom: 1/3 * $line;
 
   @media (min-width: $sm-brkpnt) {
